# django

./: pyproject.toml
nninf/: manage.py
nninf/converter/: views.py
nninf/nninf/: asgi.py  settings.py  urls.py  wsgi.py
