[tool.poetry]
name = "main"
version = "0.1.0"
description = "basic files for django project"
authors = ["bikbulatov"]
license = "apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
django = "4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
